infrastructure/ibmcloud-galasadev-cluster/dex/dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: dex
  labels:
    app: dex
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
      - name: ansible
        image: ghcr.io/dexidp/dex:v2.30.3
        imagePullPolicy: IfNotPresent
        command:
        - dex
        - serve
        - /etc/dex/galasa-config.yaml
        ports:
        - name: dex
          containerPort: 5556
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/dex
        resources:
          requests:
            memory: 100Mi
      volumes:
      - name: config
        configMap:
          name: dex-config
