infrastructure/ibmcloud-galasadev-cluster/dex/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
  labels:
    app: dex
spec:
  type: ClusterIP
  selector:
    app: dex
  ports:
  - port: 5556
    targetPort: 5556
    protocol: TCP
