infrastructure/ibmcloud-galasadev-cluster/dex/dex-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dex
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - dex.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: dex.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 5556
        path: /
        pathType: Prefix
